--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "lib/index.js",
   "author": "Leland Richardson <leland.m.richardson@gmail.com>",
   "homepage": "https://github.com/react-native-maps/react-native-maps#readme",
-  "version": "0.0.0",
+  "version": "1.18.0",
   "license": "MIT",
   "scripts": {
     "lint": "eslint . --max-warnings 0",
     "tscheck": "tsc --noEmit",
     "format-check": "prettier --check .",
     "build": "tsc --project tsconfig.build.json",
+    "postinstall": "tsc --project tsconfig.build.json",
     "test": "jest",
     "prepare": "husky install",
     "release": "semantic-release",
